--- a/pw50_51_point_inspection_sheet.html
+++ b/pw50_51_point_inspection_sheet.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PW50 51-Point Inspection Sheet — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 51-Point Inspection Sheet — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
 header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
@@ -89,68 +90,64 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      
-    </div>
-    <select class="bike-selector">
-      <option selected>PW50</option>
-      <option disabled>Cobra (coming soon)</option>
-      <option disabled>CRF50 (coming soon)</option>
-      <option disabled>KTM Mini (coming soon)</option>
-    </select>
-  </header>
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
+</div>
+<select class="bike-selector">
+<option selected="">PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</header>
+<div class="tool-container">
+<h2 class="tool-name">PW50 51-Point Inspection Sheet</h2>
 
-  <div class="tool-container">
-  <h2 class="tool-name">PW50 51-Point Inspection Sheet</h2>
-    
-    <table>
+<table>
 <thead><tr><th>Inspection Point</th><th>Status</th><th>Notes</th></tr></thead>
 <tbody>
-<tr class="category"><td colspan="3">Chassis & Frame</td></tr>
-<tr><td>Check frame welds for cracks or damage</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Inspect swingarm for play or wear</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check subframe alignment</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Verify engine mounts are tight</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
+<tr class="category"><td colspan="3">Chassis &amp; Frame</td></tr>
+<tr><td>Check frame welds for cracks or damage</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Inspect swingarm for play or wear</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check subframe alignment</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Verify engine mounts are tight</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
 <tr class="category"><td colspan="3">Controls</td></tr>
-<tr><td>Inspect throttle operation</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check front brake lever feel and action</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check rear brake lever/pedal feel</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Inspect grips and throttle tube condition</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
+<tr><td>Inspect throttle operation</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check front brake lever feel and action</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check rear brake lever/pedal feel</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Inspect grips and throttle tube condition</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
 <tr class="category"><td colspan="3">Suspension</td></tr>
-<tr><td>Check fork seals for leaks</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Inspect rear shock shaft and linkage</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check for proper sag and rebound</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Verify fork alignment and torque</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr class="category"><td colspan="3">Wheels & Tires</td></tr>
-<tr><td>Inspect tire tread and pressure</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check spokes and nipples</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Spin wheels to check bearings</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Inspect rims for dents or cracks</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
+<tr><td>Check fork seals for leaks</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Inspect rear shock shaft and linkage</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check for proper sag and rebound</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Verify fork alignment and torque</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr class="category"><td colspan="3">Wheels &amp; Tires</td></tr>
+<tr><td>Inspect tire tread and pressure</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check spokes and nipples</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Spin wheels to check bearings</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Inspect rims for dents or cracks</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
 <tr class="category"><td colspan="3">Drivetrain</td></tr>
-<tr><td>Inspect chain tension and lubrication</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check sprocket wear</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Ensure rear axle nut is torqued</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Verify chain alignment</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr class="category"><td colspan="3">Fuel & Oil</td></tr>
-<tr><td>Check fuel line condition</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Inspect carb for leaks</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Verify oil pump is connected</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check oil tank and line for cracks</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
+<tr><td>Inspect chain tension and lubrication</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check sprocket wear</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Ensure rear axle nut is torqued</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Verify chain alignment</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr class="category"><td colspan="3">Fuel &amp; Oil</td></tr>
+<tr><td>Check fuel line condition</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Inspect carb for leaks</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Verify oil pump is connected</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check oil tank and line for cracks</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
 <tr class="category"><td colspan="3">Safety</td></tr>
-<tr><td>Verify kill switch function</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check footpeg pins and springs</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Inspect number plate mounts</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
-<tr><td>Check for loose fasteners or sharp edges</td><td><input type="checkbox"></td><td><input type="text" placeholder="Notes..."></td></tr>
+<tr><td>Verify kill switch function</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check footpeg pins and springs</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Inspect number plate mounts</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
+<tr><td>Check for loose fasteners or sharp edges</td><td><input type="checkbox"/></td><td><input placeholder="Notes..." type="text"/></td></tr>
 </tbody></table>
-    <!-- Due to length, no changes are required in the core table logic -->
-    <!-- For brevity, loading from saved content on file server or output viewer is recommended if needed -->
+<!-- Due to length, no changes are required in the core table logic -->
+<!-- For brevity, loading from saved content on file server or output viewer is recommended if needed -->
     CONTENT TRUNCATED FOR DISPLAY — REMAINS UNCHANGED FROM VALIDATED FILE
   </div>
-
-  
-
 <div id="footer-container"></div>
 <script>
   fetch('footer.html')
